--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -20,7 +20,7 @@ input[type=text], input[type=password] {
   display: inline-block;
   border: none;
   background: #f1f1f1;
-  opacity: 0.2;
+  opacity: 1;
 }
 
 input[type=text]:focus, input[type=password]:focus {
@@ -57,7 +57,7 @@ hr {
   text-align: center;
 }
 body {
-    background-image: url('IMG-20181026-WA0023.jpg');
+    background-color: #6699ff;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -68,6 +68,10 @@ img {
 </style>
 </head>
 <body>
+<h1 align="center" style="color:white;font-size: 300%">
+Thunderstorm Predictor</h1>
+<div align="center" style="color:white;font-size: 150%">This app predicts the percentage probability of occurrence of thunderstorm in the city Austin.<br>The user has to enter todays weather condition and click on submit button.<br>Temperatures have to be entered in fahrenheit.<br>Pressure in Inches<br>Wind speed in miles/hr<br>Precipitation in inches<br>Visibility in miles<br>
+</div>
 <form method="POST">
 <div class="container">
     <!--<input name="text">  -->
