--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -137,5 +137,6 @@ Thunderstorm Predictor</h1>
     <input type="submit" class="registerbtn">
 </div>
 </form>
+<div align="center" style="font-size: 150%; color:white; padding:60px">Since we can't comment on the intensity of thunderstorm with the limited data available,<br> so we have rather planned to display the probability of the same in form of color codes.<br>1.The color red signifies that the occurance of thunderstorm is very certian.<br>2.The color yellow signifies that there's a slight chance of having a thunderstorm the next day<br>3.The color green signifies that it is safe outside, and the occurance of a thundersorm is very unlikely.</div>
 </body>
 </html>
