--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -20,7 +20,7 @@ input[type=text], input[type=password] {
   display: inline-block;
   border: none;
   background: #f1f1f1;
-  opacity: 1;
+  opacity: 0.2;
 }
 
 input[type=text]:focus, input[type=password]:focus {
@@ -57,7 +57,7 @@ hr {
   text-align: center;
 }
 body {
-    background-color: #6699ff;
+    background-image: url('IMG-20181026-WA0023.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -68,10 +68,6 @@ img {
 </style>
 </head>
 <body>
-<h1 align="center" style="color:white;font-size: 300%">
-Thunderstorm Predictor</h1>
-<div align="center" style="color:white;font-size: 150%">This app predicts the percentage probability of occurrence of thunderstorm in the city Austin.<br>The user has to enter todays weather condition and click on submit button.<br>Temperatures have to be entered in fahrenheit.<br>Pressure in Inches<br>Wind speed in miles/hr<br>Precipitation in inches<br>Visibility in miles<br>
-</div>
 <form method="POST">
 <div class="container">
     <!--<input name="text">  -->
@@ -131,12 +127,11 @@ Thunderstorm Predictor</h1>
       <input type="text" class="form-control" id="WindGustMPH" name="WindGustMPH" placeholder="Enter recorded wind gust for the day in miles per hour">
       <br>
       <label for="PrecipitationSumInches" style="color: white"><b>PrecipitationSumInches:</b></label>
-      <input type="text" class="form-control" id="PrecipitationSumInches" name="PrecipitationSumInchese" placeholder="Enter recorded precipitation for the day in inches">
+      <input type="text" class="form-control" id="PrecipitationSumInches" name="PrecipitationSumInches" placeholder="Enter recorded precipitation for the day in inches">
       <br>
 
     <input type="submit" class="registerbtn">
 </div>
 </form>
-<div align="center" style="font-size: 150%; color:white; padding:60px">Since we can't comment on the intensity of thunderstorm with the limited data available,<br> so we have rather planned to display the probability of the same in form of color codes.<br>1.The color red signifies that the occurance of thunderstorm is very certian.<br>2.The color yellow signifies that there's a slight chance of having a thunderstorm the next day<br>3.The color green signifies that it is safe outside, and the occurance of a thundersorm is very unlikely.</div>
 </body>
 </html>
