--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -2,10 +2,16 @@
 <html>
 <head>
 	<title>Result</title>
+	<style>
+	p {
+		font-size:500%;
+		padding:250px; 
+	}
+	</style>
 </head>
 <body bgcolor={{color}}>
 
-	<p> Probability {{result*100}}</p>
+	<p align="center"> <b>Probability {{result*100}}%</b></p>
 
 </body>
 </html>
